--- a/ToDoList/app/src/main/AndroidManifest.xml
+++ b/ToDoList/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.to_do">
+    package="com.example.todolist">
 
     <application
         android:allowBackup="true"
@@ -8,23 +8,21 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ToDo">
+        android:theme="@style/Theme.ToDoList">
         <activity
-            android:name=".SplashActivity"
+            android:name=".ItemActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DashboardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-        </activity>
-        <activity
-            android:name=".SplashActivity"
-            android:exported="true">
         </activity>
     </application>
 
